Possible fix for Bug 384701 Mailcompose erroring out on migrated profile - match movemail's GetLocalStoreType function prototype to the rest of mailnews. r/sr=bienvenu.